--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -2,8 +2,7 @@ name: deb_packege
 
 on:
  push:
-    tags:
-      - "*deb_v*"
+     branches: [ main ]
    
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
