--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -2,7 +2,8 @@ name: deb_packege
 
 on:
  push:
-     branches: [ main ]
+     tags:
+      - "*deb_v*"
    
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
